# bqConnect-CLI

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: release.yml
src/openbq/: __init__.py  cli.py  utils.py
