[project]
name = "openbq"
version = "0.1.0"
license = "Apache-2.0"
description = "Open Source Biometric Quality Framework Command-Line Interface (bqConnect CLI)."
readme = "README.md"
authors = [{ name = "Liam Wu", email = "liam@openbq.io" }]
maintainers = [{ name = "Liam Wu", email = "liam@openbq.io" }]
requires-python = ">=3.10,<3.15"
dependencies = []
keywords = ["openbq", "bqconnect", "cli", "biometric"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Documentation = "https://openbq.github.io/getting_started/cli.html"
Changelog = "https://openbq.github.io/changelog/#bqconnectcli"
Repository = "https://github.com/openbq/bqconnectcli"
Releases = "https://github.com/openbq/bqconnectcli/releases"
Issues = "https://github.com/openbq/bqconnectcli/discussions"

[project.scripts]
openbq = "openbq:cli.main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pyinstaller>=6.18.0"]
